sshm/tests/snapshots/integration_test__search_filters_connections.snap
---
source: tests/integration_test.rs
expression: backend
---
"◆  SSH Connection Manager                                                       "
"│  Search: prod                                                                 "
"│                                                                               "
"│  ❯ ● [production] prod-server (admin@192.168.1.10:22)                         "
"│                                                                               "
"│  ↑↓/j k: Navigate | Enter: Connect | A: Add | E: Edit | D: Delete | I: Import "
"└                                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
