sshm/tests/snapshots/integration_test__search_mode_shows_search_bar.snap
---
source: tests/integration_test.rs
expression: backend
---
"◆  Search Connections                                                           "
"│  Search: prod                                                                 "
"│                                                                               "
"│  ❯ ● [production] prod-server (admin@192.168.1.10:22)                         "
"│    ○ [development] dev-server (developer@192.168.1.20:2222)                   "
"│    ○ web-server (www@example.com:22)                                          "
"│                                                                               "
"│  Type to filter | Enter/Esc/q: Exit search                                    "
"└                                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
