sshm/tests/snapshots/integration_test__selected_item_highlighted.snap
---
source: tests/integration_test.rs
expression: backend
---
"◆  SSH Connection Manager                                                       "
"│  Search: Type to search...                                                    "
"│                                                                               "
"│    ○ [production] prod-server (admin@192.168.1.10:22)                         "
"│  ❯ ● [development] dev-server (developer@192.168.1.20:2222)                   "
"│    ○ web-server (www@example.com:22)                                          "
"│                                                                               "
"│  ↑↓/j k: Navigate | Enter: Connect | A: Add | E: Edit | D: Delete | I: Import "
"└                                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
